# swiboe

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  run_tests.sh  travis_test.sh
assets/icon_round/: icon_round.ai
benches/: benches.rs  lib.rs
c_client/: Cargo.toml  swiboe.py  test.py
c_client/src/: lib.rs
doc/: Makefile
doc/rfcs/: 000_layered_rpc.md  001_log.md
doc/source/: conf.py  index.rst
gtk_gui/: Cargo.toml
gtk_gui/src/: buffer_view_widget.rs  command.rs  completion_widget.rs  lib.rs
gui/: Cargo.toml  test.lua
gui/src/: buffer_view_widget.rs  buffer_views.rs  completion_widget.rs  config_file.rs  keymap_handler.rs  lib.rs  main.rs
key_mappings/: Cargo.toml  test.lua
python/s/: __init__.py
src/: buffer.rs  client.rs  error.rs  ipc.rs  ipc_bridge.rs  lib.rs  plugin.rs  plugin_buffer.rs  plugin_core.rs  plugin_list_files.rs  rpc.rs  server.rs  spinner.rs  swiboe.rs  testing.rs
src/client/: event_loop.rs  mod.rs  rpc_loop.rs
src/client/rpc/: client.rs  mod.rs  server.rs
src/plugin/: buffer.rs  list_files.rs  logger.rs  mod.rs  remote.rs
src/plugin/buffer/: base.rs  delete.rs  get_content.rs  list.rs  mod.rs  new.rs  open.rs
src/plugin/log/: base.rs  debug.rs  error.rs  info.rs  mod.rs  warn.rs
src/server/: api_table.rs  ipc_bridge.rs  mod.rs  plugin_core.rs  swiboe.rs
subsequence_match/: Cargo.toml
subsequence_match/src/: lib.rs
term_gui/: Cargo.toml  config.lua
tests/: core.rs  lib.rs  plugin_buffer.rs  tests.rs
tests/support/: mod.rs
