[package]
name = "swiboe"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]

[dependencies]
clap = "1.2.0"
libc = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.4"
threadpool = "0.1.4"
time = "0.1.32"
unix_socket = "0.4.5"
uuid = "0.1"
mio = "0.5.0"

[[test]]
name = "tests"

[[bench]]
name = "benches"
