[package]
name = "swiboe_gtk_gui"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]

[dependencies]
serde = "0.6.0"
serde_json = "0.6.0"
serde_macros = "0.5.3"
time = "0.1.32"
uuid = "0.1"

[dependencies.glib]
git = "https://github.com/rust-gnome/glib.git"

[dependencies.gdk]
git = "https://github.com/rust-gnome/gdk"

[dependencies.gtk]
git = "https://github.com/rust-gnome/gtk.git"
features = ["gtk_3_12"]

[dependencies.cairo-rs]
git = "https://github.com/rust-gnome/cairo.git"

[dependencies.swiboe]
path = ".."

[dependencies.swiboe_gui]
path = "../gui"
