[package]
name = "swiboe_gui"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]

[dependencies]
libc = "0.1.10"
serde = "0.6.0"
serde_json = "0.6.0"
serde_macros = "0.5.3"
time = "0.1.32"
uuid = "0.1"

[dependencies.lua]
git = "https://github.com/jcmoyer/rust-lua53"
rev = "099093a7008c78d7c87f616ea92bc89def8f4a48"

[dependencies.swiboe]
path = ".."
