[package]
name = "term_gui"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]

[dependencies]
clap = "1.2.0"
rustbox = "0.7.0"
serde = "0.5.2"
serde_json = "0.5.1"
serde_macros = "0.5.1"
time = "0.1.32"
uuid = "0.1"

[dependencies.switchboard]
path = ".."

[dependencies.switchboard_gui]
path = "../gui"

[dependencies.subsequence_match]
path = "../subsequence_match/"
