[package]
name = "term_gui"
version = "0.1.0"
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]

[dependencies]
clap = "2.2.1"
rustbox = "0.8.1"
serde = "1.0"
serde_json = "1.0"
time = "0.1.32"
uuid = "0.1"

[dependencies.swiboe]
path = ".."

[dependencies.swiboe_gui]
path = "../gui"

[dependencies.subsequence_match]
path = "../subsequence_match/"
